--- a/pbb.css
+++ b/pbb.css
@@ -1,5 +1,6 @@
 body {
 	color: #333;
+	font-family: 'Source Sans Pro', sans-serif;
 	font-size: 18px;
 	line-height: 1.6;
 	margin: 40px auto;
@@ -7,7 +8,13 @@ body {
 	padding: 0 10px;
 }
 
-h1, h2, h3 {
+code {
+	font-family: 'Source Code Pro', monospace;
+}
+
+h1,
+h2,
+h3 {
 	line-height: 1.2;
 }
 
