--- a/pbb.css
+++ b/pbb.css
@@ -4,12 +4,13 @@ body {
 	font-size: 18px;
 	line-height: 1.6;
 	margin: 40px auto;
-	max-width: 650px;
+	max-width: 670px;
 	padding: 0 10px;
 }
 
 code {
 	font-family: 'Source Code Pro', monospace;
+	font-size: 16px;
 }
 
 h1,
