--- a/pbb.css
+++ b/pbb.css
@@ -1,3 +1,10 @@
+blockquote {
+	border-left: 5px solid #eee;
+	color: #666;
+	margin: auto;
+	padding: 0 1.6em;
+}
+
 body {
 	color: #333;
 	font-family: 'Source Sans Pro', sans-serif;
