Enable TOC as option
- Update title extraction to allow YAML front matter, don't sent title
  to md2html any longer

- Use metadata file to set TOC default to false

- Don't set page title via metadata, but by shifting titles (except for
  index file)

- Add TOC to pandoc options

- Set date as metadata instead of inserting a string

- Adjust heading sizes in CSS

Part of #23

--- a/pbb.css
+++ b/pbb.css
@@ -30,6 +30,27 @@ h3 {
 	line-height: 1.2;
 }
 
+
+h1.title {
+	font-size: 36px;
+}
+
+h1:not(.title) {
+	font-size: 27px;
+}
+
+h2 {
+	font-size: 21px;
+}
+
+h2#toc-title {
+	font-size: 27px;
+}
+
+h3 {
+	font-size: 18px;
+}
+
 img {
 	max-width: 100%;
 }
