--- a/pbb.css
+++ b/pbb.css
@@ -1,3 +1,17 @@
+html {
+	font-size: 112.5%;
+}
+
+body {
+	color: #333;
+	font-family: 'Source Sans Pro', sans-serif;
+	font-size: 1rem;
+	line-height: 1.6;
+	margin: 40px auto;
+	max-width: 670px;
+	padding: 0 10px;
+}
+
 blockquote {
 	border-left: 5px solid #eee;
 	color: #666;
@@ -5,19 +19,9 @@ blockquote {
 	padding: 0 1.6em;
 }
 
-body {
-	color: #333;
-	font-family: 'Source Sans Pro', sans-serif;
-	font-size: 18px;
-	line-height: 1.6;
-	margin: 40px auto;
-	max-width: 670px;
-	padding: 0 10px;
-}
-
 code {
 	font-family: 'Source Code Pro', monospace;
-	font-size: 16px;
+	font-size: .88em;
 }
 
 :not(pre) > code {
@@ -30,25 +34,24 @@ h3 {
 	line-height: 1.2;
 }
 
-
-h1.title {
-	font-size: 36px;
+h1 {
+	font-size: 1.5rem;
 }
 
-h1:not(.title) {
-	font-size: 27px;
+h1.title {
+	font-size: 2rem;
 }
 
 h2 {
-	font-size: 21px;
+	font-size: 1.17rem;
 }
 
 h2#toc-title {
-	font-size: 27px;
+	font-size: 1.5rem;
 }
 
 h3 {
-	font-size: 18px;
+	font-size: 1rem;
 }
 
 img {
