--- a/pbb.css
+++ b/pbb.css
@@ -51,6 +51,23 @@ h1.title {
 	font-size: 2rem;
 }
 
+#blogtitle {
+	color: #fff;
+	font-size: 3.7rem;
+	font-weight: bold;
+	text-align: center;
+	text-shadow: 0px 0px 10px #333;
+}
+
+#blogtitle :link,
+#blogtitle :visited,
+#blogtitle :hover,
+#blogtitle :focus,
+#blogtitle :active {
+	color: inherit;
+	text-decoration: none;
+}
+
 h2 {
 	font-size: 1.17rem;
 }
