--- a/pbb.css
+++ b/pbb.css
@@ -128,6 +128,15 @@ img {
 	max-width: 100%;
 }
 
+p.date {
+	background: url(images/calendar.svg) left center/1em no-repeat;
+	color: #7e7e7e;
+	font-size: 90%;
+	font-style: italic;
+	margin-left: 1em;
+	padding: 0 1.2em;
+}
+
 pre  {
 	padding: 9px;
 }
