--- a/assets/pbb.css
+++ b/assets/pbb.css
@@ -1,31 +1,9 @@
-html {
-	font-size: 112.5%;
-}
-
 body {
-	color: #333;
 	font-family: "Source Sans Pro", sans-serif;
-	font-size: 1rem;
-	line-height: 1.6;
-	margin: 40px auto;
-	max-width: 670px;
-	padding: 0 10px;
-}
-
-blockquote {
-	border-left: 5px solid #eee;
-	color: #666;
-	margin: auto;
-	padding: 0 1.6em;
 }
 
 code {
 	font-family: "Source Code Pro", monospace;
-	font-size: .88em;
-}
-
-pre > code {
-	white-space: pre;
 }
 
 :not(pre, a) > code {
@@ -48,10 +26,6 @@ div.index-title {
 div.index-date p,
 div.index-title p {
 	margin: initial;
-}
-
-div.sourceCode { /* stylelint-disable-line */
-	overflow-x: auto;
 }
 
 a {
@@ -92,14 +66,8 @@ figure {
 	margin: 1em auto;
 	padding: 5px;
 	text-align: center;
-	width: -moz-fit-content; /* stylelint-disable-line */
+	width: -moz-fit-content;
 	width: fit-content;
-}
-
-h1,
-h2,
-h3 {
-	line-height: 1.2;
 }
 
 h1 {
@@ -143,10 +111,6 @@ h3 {
 	font-size: 1rem;
 }
 
-img {
-	max-width: 100%;
-}
-
 p.date {
 	background: url("images/calendar.svg") left center/1em no-repeat;
 	color: #7e7e7e;
@@ -154,42 +118,16 @@ p.date {
 	font-style: italic;
 	margin-left: 1em;
 	padding: 0 1.2em;
+	text-align: left;
 }
 
-pre {
+div.sourceCode {
 	padding: 9px;
-}
-
-pre.numberSource { /* stylelint-disable-line */
-	border: none;
-}
-
-pre > code.sourceCode > span > a:first-child::before { /* stylelint-disable-line */
-	line-height: 1.6em;
-}
-
-pre > code.sourceCode > span:first-child > a:first-child::before { /* stylelint-disable-line */
-	margin-top: -9px;
-	padding-top: 9px;
-}
-
-pre > code.sourceCode > span:last-child > a:first-child::before { /* stylelint-disable-line */
-	margin-bottom: -9px;
-	padding-bottom: 9px;
-}
-
-summary:focus {
-	outline: none;
-}
-
-table {
-	border-collapse: collapse;
 }
 
 table td,
 table th {
 	border: 1px solid #dfe2e5;
-	padding: 6px 13px;
 }
 
 table tr:nth-child(even) {
